--- a/src/components/PaginaPadrao/PaginaPadrao.module.scss
+++ b/src/components/PaginaPadrao/PaginaPadrao.module.scss
@@ -1,4 +1,11 @@
 .container {
+  
+  background-image: url('/assets/background-logic.webp');
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  height: 100vh;
+
   display: flex;
   flex-direction: column;
   min-height: 100vh;
