--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,27 +1,128 @@
+@import 'styles/breakpoints';
+
 .footer {
+
+  position: relative;
+
   align-items: center;
 
-  background-image: url('/assets/footer.png');
-  background-size: cover;
   background-repeat: no-repeat;
+
+  background-position: 0rem;
+
+  background-size: cover;
 
   bottom: 0;
 
-  display: flex;
+  height: 8rem;
 
-  height: 80px;
-  justify-content: space-between;
-  padding: 0 50px;
   width: 100%;
 
-  div {
+  .container{
+
+    margin-top: 2rem;
+
+    width: 100%;
+    height: 100%;
+
+    background-image: url('../../assets/background-footer.png');
+
+    display: flex;
+  
+    background-size: cover;
+
+    align-items: center;
+
+    background-repeat: no-repeat;
+
+    background-position: 0rem;
+
+    justify-content: space-between;
+
+    padding: 0 50px;
+  }
+
+  .iconsContainer {
     display: flex;
     gap: 50px;
   }
+
+  .iconsContainer span{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #000000;
+
+    border-radius: 100%;
+
+    width: 3.0rem;
+    height: 3.0rem;
+
+  }
+
+  .iconsContainer svg{
+    width: 2.0rem;
+    height: 2.0rem;
+
+  }
   
-  span {
+  .container span {
     color: white;
     font-size: 24px;
-    text-align: right;
+    text-align: left;
+  }
+
+  @media(max-width: $tablet) {
+
+    .container{
+      gap: 20px;
+      padding: 0 25px;
+    }
+
+    .container span {
+      font-size: 18px;
+    }
+
+    .iconsContainer span{
+      width: 2.5rem;
+      height: 2.5rem;
+    }
+
+    .iconsContainer svg{
+      height: 1.5rem;
+      width: 1.5rem;
+    }
+
+  }
+  @media(max-width: $mobile-sm) {
+
+    .container{
+
+      background-image: url('../../assets/footer-background-mobile.png');
+      background-size: 100%;
+      background-position:top;
+
+      flex-direction: column-reverse;
+      
+      justify-content: center;
+  
+
+    }
+
+    .container span {
+      font-size: 15px;
+    }
+
+    .iconsContainer span{
+      width: 2rem;
+      height: 2rem;
+    }
+
+    .iconsContainer svg{
+      height: 1.25rem;
+      width: 1.25rem;
+    }
+
   }
 }
