--- a/src/components/Busca/Busca.module.scss
+++ b/src/components/Busca/Busca.module.scss
@@ -1,3 +1,5 @@
+@import 'styles/breakpoints';
+
 .busca {
   align-items: center;
   background-color: white;
@@ -6,6 +8,10 @@
   display: flex;
   padding: 14px 16px;
   width: 100%;
+
+  @media(max-width: $tablet){
+    border-radius: 0;
+  }
 }
 
 .input {
