--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -3,12 +3,11 @@
 .nav {
   align-items: center;
   display: grid;
-  grid-template-columns: 2fr minmax(400px, 2fr) 1fr;
+  grid-template-columns: 1fr minmax(500px, 3fr) 1fr;
   grid-template-rows: 2fr 0.75fr;
   grid-template-areas: 
   'logo busca icones'
   'links links links';
-
   height: 170px;
   width: 100vw;
   justify-content: center;
@@ -18,16 +17,20 @@
 
   @media(max-width: $tablet) {
     grid-template-areas:
-      'logo logo'
-      'links icones'
-      'busca busca';
-    grid-template-columns: 6fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+      'hamburguer logo logo icones'
+      'busca busca busca busca';
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     height: 200px;
     justify-items: center;
   }
   @media(max-width: $mobile-sm) {
-    padding: 0 50px;
+    width: 100%;
+    grid-template-areas:
+    'hamburguer logo icones'
+    'busca busca busca';
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 1fr 1fr;
   }
 }
 
@@ -35,12 +38,20 @@
   cursor: pointer;
   grid-area: logo;
   margin-inline: auto;
-  padding-inline-start: 2rem;
   width: 15rem;
   border-radius: 24px;
+  @media (max-width: $tablet) {
+    width: 85%;
+  }
+  @media (max-width: $mobile-sm) {
+    width: 240px;
+  }
 }
 
 .links {
+
+  list-style-type: none;
+
   grid-area: links;
   background-color: #000;
 
@@ -55,7 +66,90 @@
   gap: 20px;
   @media(max-width: $tablet) {
     justify-self: start;
+    position: fixed;
+    top: 0;
+    left: 100%;
   }
+}
+
+.hamburguer{
+  grid-area: hamburguer;
+  padding: .5rem;
+  font-size: 3rem;
+  cursor: pointer;
+  margin-bottom: 4px;
+}
+
+.hamburguer:active{
+  background-color: #c6c6c675;
+}
+
+.sidenav {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+
+  height: 100%;
+  width: 250px;
+  z-index: 1;
+  position: fixed;
+  top: -1rem;
+  right: 0;
+  bottom: 0;
+  left: -150%;
+
+  background-color: #111;
+  overflow-x: hidden;
+  transition: .5s;
+
+  padding: 0;
+  gap:0;
+  padding-top: 5rem;
+}
+
+.sidenav li{
+  width:100%;
+  border-bottom: .25px dotted #f2f2f2;
+}
+
+.active{
+  @media(max-width: $tablet) {
+    left:0;
+  }
+}
+
+.sidenav li a {
+  background-color: #f8ad14;
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+  width: 100%;
+}
+
+.sidenav li a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  color: white;
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+  cursor: pointer;
+}
+
+.sidenav .closebtn:active{
+  background-color: #c6c6c675;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
 }
 
 .link {
