--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -4,11 +4,10 @@
   align-items: center;
   display: grid;
   grid-template-columns: 1fr minmax(500px, 3fr) 1fr;
-  grid-template-rows: 2fr 0.75fr;
+  grid-template-rows: 2fr 1fr;
   grid-template-areas: 
   'logo busca icones'
   'links links links';
-  height: 170px;
   width: 100vw;
   justify-content: center;
   z-index: 1;
@@ -21,7 +20,6 @@
       'busca busca busca busca';
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr .25fr;
-    height: 200px;
     justify-items: center;
   }
   @media(max-width: $mobile-sm) {
@@ -29,8 +27,9 @@
     grid-template-areas:
     'hamburguer logo icones'
     'busca busca busca';
+    height: 100px;
   grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 1fr .5fr;
+  grid-template-rows: .75fr .25fr;
   }
 }
 
@@ -55,15 +54,14 @@
   grid-area: links;
   background-color: #000;
 
-  padding-inline: 2rem;
+  padding-inline: 3rem;
 
   align-items: center;
   width: 100%;
   height: 100%;
-  min-height: 40px;
   display: flex;
   justify-content: flex-start;
-  gap: 20px;
+  gap: 25px;
   @media(max-width: $tablet) {
     justify-self: start;
     position: fixed;
@@ -75,9 +73,12 @@
 .hamburguer{
   grid-area: hamburguer;
   padding: .5rem;
-  font-size: 3rem;
+  font-size: 2.5rem;
   cursor: pointer;
   margin-bottom: 4px;
+  @media(max-width: $mobile-sm) {
+    font-size: 1.75rem;
+  }
 }
 
 .hamburguer:active{
@@ -122,11 +123,15 @@
   background-color: #f8ad14;
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 18px;
   color: #818181;
   display: block;
   transition: 0.3s;
   width: 100%;
+
+  @media(max-width: $mobile-sm) {
+    padding-left: 12px;
+  }
 }
 
 .sidenav li a:hover {
@@ -154,7 +159,7 @@
 
 .link {
   color: white;
-  font-size: 22px;
+  font-size: 16px;
 }
 
 .links a{
@@ -185,4 +190,8 @@
   gap: 20px;
   grid-area: icones;
   margin-left: 30px;
+
+  @media(max-width:$mobile-sm){
+    margin: auto;
+  }
 }
