--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -7,7 +7,6 @@
   display: flex;
   flex-direction: column;
   padding: 0 100px 0;
-  transform: translateY(-250px);
   h1 {
     color: white;
     font-size: 40px;
@@ -32,5 +31,10 @@
         border-radius: 144px;
       }
     }
+  }
+  &-thumbnail{
+  width: 200px;
+  height: 300px; 
+  object-fit: cover;
   }
 }
