--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,11 @@
+@import 'styles/variables';
+
 * {
   box-sizing: border-box;
 }
+
 body {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   overflow-x: hidden;
