feat: improving cart component and reducer to match search and stack items

--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -10,8 +10,7 @@
   background-color: #eff9ff;
   display: flex;
   justify-content: space-between;
-  max-width: 800px;
-  padding: 16px;
+  padding: 16px 0;
   width: 100%;
 }
 
