--- a/src/components/Item/Item.module.scss
+++ b/src/components/Item/Item.module.scss
@@ -7,11 +7,11 @@
   overflow: hidden;
   width: 335px;
   &-description {
-    background-color: #eff9ff;
+    background-color: #6f42c121;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex: 1;
+    flex: 1 1;
   }
   &-title {
     padding: 16px 16px 0 16px;
@@ -26,7 +26,6 @@
 
   &-image {
     margin: 0 auto;
-    padding: 2rem 0;
   }
 
   &-info {
@@ -62,7 +61,7 @@
   }
 }
 
-.itemNoCarrinho {
+.itemInCart {
   align-items: center;
   width: 100%;
   flex-direction: row;
